Open Search, Overview (from index) and Details (from overview) in the same browser tab instead of a new one

--- a/ddosdb/ddosdb/templates/ddosdb/index.html
+++ b/ddosdb/ddosdb/templates/ddosdb/index.html
@@ -16,11 +16,11 @@
         </div>
 
         <div class="container my-4" align="center">
-            <a class="btn btn-ddosdb" target="_blank" href="{% url "overview" %}">Overview</a>
+            <a class="btn btn-ddosdb" href="{% url "overview" %}">Overview</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             OR
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="btn btn-ddosdb" target="_blank" href="{% url "query" %}?q=">Search</a>
+            <a class="btn btn-ddosdb" href="{% url "query" %}?q=">Search</a>
         </div>
     </div>
 </div>
