changed log in icon

--- a/ddosdb/ddosdb/templates/ddosdb/menu.html
+++ b/ddosdb/ddosdb/templates/ddosdb/menu.html
@@ -24,7 +24,7 @@
           <div title="admin"><i class="bi-gear menu-icon"></i></div>
         </a>
         <a class="nav-link" href="{% url 'login' %}">
-          <div title="log in"><i class="bi-box-arrow-in-left menu-icon" ></i></div>
+          <div title="log in"><i class="bi-box-arrow-in-right menu-icon" ></i></div>
         </a>
       {% else %}
         <a class="nav-link" target="_blank" href="{% url 'account' %}">
