Download icon on details page as well

--- a/ddosdb/ddosdb/templates/ddosdb/details.html
+++ b/ddosdb/ddosdb/templates/ddosdb/details.html
@@ -21,7 +21,7 @@
             <div class="card">
                 <div class="card-title text-center" title="download fingerprint">
                     <a  href="{% url "download" %}?key={{ key|urlencode }}">
-                    fingerprint {{ key }}
+                    fingerprint {{ key }} <i class="bi-save overview-icon"></i>
                     </a>
                 </div>
                   <div class="card-footer">
