Added multiple tokens per user and token page

--- a/ddosdb/ddosdb/templates/ddosdb/account.html
+++ b/ddosdb/ddosdb/templates/ddosdb/account.html
@@ -29,6 +29,8 @@
                 Your account grants you access to DDoSDB and belongs only to you.
                 Do not share your credentials with anyone else.
             </p>
+
+{% comment %}
             <h4 class="mb-3">Authorization Token</h4>
             <p class="lead">You can use a token to access the DDoSDB API.
                 By clicking the red lock icon below, you can see the token linked to your account and how to use it in an HTTP header.
@@ -40,6 +42,7 @@
                 <p class="card-body">Authorization: Token {{ token }}</p>
             </div>
             <p/>
+{% endcomment %}
 
             <h4 class="mb-3">Password</h4>
             <p class="lead">Please use a strong password. We do not enforce a certain pattern, but a good password makes it significantly more difficult for others to gain access to your account.</p>
