More checks on permissions for tokens and queries

--- a/ddosdb/ddosdb/templates/ddosdb/tokens.html
+++ b/ddosdb/ddosdb/templates/ddosdb/tokens.html
@@ -79,7 +79,11 @@
     </form>
 </div>
 {% else %}
-    If you need (additional) authorization tokens, please contact the admin of this DDoSDB
+<div class="container text-centered">
+    <div class="row">
+        <p class="lead">If you need (additional) authorization tokens, please contact the admin of this DDoSDB.</p>
+    </div>
+</div>
 {% endif %}
 
 
