Check on user.is_staff rather than user.is_superuser for enabling cogwheel link

--- a/ddosdb/ddosdb/templates/ddosdb/menu.html
+++ b/ddosdb/ddosdb/templates/ddosdb/menu.html
@@ -42,7 +42,7 @@
           <div title="Authorization tokens"><i class="bi-key menu-icon"></i></div>
         </a>
         {% endif %}
-        {% if request.user.is_superuser %}
+        {% if request.user.is_staff %}
           <a class="nav-link" target="_blank" href="/admin/">
             <div title="admin settings"><i class="bi-gear menu-icon"></i></div>
           </a>
