--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -60,7 +60,7 @@
       {% for node in results %}
         <tr>
           <td>
-            {% if user.username == node|get_item:"submitter"  or user.is_superuser %}
+            {% if user.username == node|get_item:"submitter" or perms.ddosdb.delete_fingerprint %}
               {% if o %}
                 <a href="{% url "delete" %}?key={{node|get_item:'key'}}&q={{ q }}&o={{ o }}&so={{ so }}&son={{ son }}">
               {% else %}
@@ -100,7 +100,7 @@
                 </a>
               </div>
             {% elif hdr == "shareable" %}
-                {% if user.username == node|get_item:"submitter" or user.is_superuser %}
+                {% if user.username == node|get_item:"submitter" or perms.ddosdb.edit_sync_fingerprint %}
                   <div title="click to toggle shareable status">
                     <a href="{% url "toggle-shareable" %}?q={{ q }}&key={{node|get_item:"key"}}&o={{ o }}&so={{ so }}&son={{ son }}&shareable={{node|get_item:hdr}}">
                     {% if node|get_item:hdr == True %}
@@ -137,7 +137,7 @@
               </div>
             {% elif hdr == "comment" %}
               <div title="{{node|get_item:hdr}}">
-                {% if user.username == node|get_item:"submitter"  or user.is_superuser %}
+                {% if user.username == node|get_item:"submitter"  or perms.ddosdb.edit_comment_fingerprint %}
                   <span class="float-left">
                     &nbsp;<a href="{% url "edit-comment" %}?key={{node|get_item:"key"}}">
                       <i class="bi-pencil-square"></i>
