--- a/ddosdb/ddosdb/templates/ddosdb/query.html
+++ b/ddosdb/ddosdb/templates/ddosdb/query.html
@@ -43,7 +43,7 @@
 <div class="container align-items-center" id="bar">
     <div class="row py-1">
         <div class="col-sm-12">
-        Search yielded {{ results|length }} results <a href="{% url "help" %}" target="_blank"><small>(help)</small></a>
+        Search yielded {{ results|length }} results (maximum is set at 20) <a href="{% url "help" %}" target="_blank"><small>(help)</small></a>
         </div>
     </div>
 </div>
