Moved delete confirm dialog to javascript because of CSP headers restricting inline script

--- a/ddosdb/ddosdb/templates/ddosdb/header.html
+++ b/ddosdb/ddosdb/templates/ddosdb/header.html
@@ -9,5 +9,6 @@
     <link rel="shortcut icon" href="{% static 'ddosdb/img/favicon.png' %}"/>
 
     <script src="{% static 'ddosdb/js/bootstrap.bundle.js' %}"></script>
+    <script src="{% static 'ddosdb/js/delete-confirm.js' %}"></script>
 
 </head>
