--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -109,9 +109,9 @@
           <td>
             {% if user.username == node|get_item:"submitter" or perms.ddosdb.delete_fingerprint %}
               {% if o %}
-                <a href="{% url "delete" %}?key={{node|get_item:'key'}}&q={{ q }}&o={{ o }}&so={{ so }}&son={{ son }}&plen={{ plen }}&p={{ p }}" onclick="return confirm('Are you sure you want to delete this fingerprint?')">
+                <a href="{% url "delete" %}?key={{node|get_item:'key'}}&q={{ q }}&o={{ o }}&so={{ so }}&son={{ son }}&plen={{ plen }}&p={{ p }}" class="delete-confirm">
               {% else %}
-                <a href="{% url "delete" %}?key={{node|get_item:'key'}}&q={{ q }}&o=key&so={{ so }}&son={{ son }}&plen={{ plen }}&p={{ p }}">
+                <a href="{% url "delete" %}?key={{node|get_item:'key'}}&q={{ q }}&o=key&so={{ so }}&son={{ son }}&plen={{ plen }}&p={{ p }}"  class="delete-confirm">
               {% endif %}
                   <div title="delete {{ node|get_item:'key' }}"><i class="bi-trash overview-icon"></i></div>
                 </a>
